# clinical-trial-agent

./: .gitignore  Dockerfile  PROJECT_CONTEXT.md  README.md  openenv.yaml  results.json
.claude/memory/: project_clinical_trial_agent.md
clinical_trial_agent/: README.md  __init__.py  client.py  models.py  pyproject.toml
clinical_trial_agent/server/: __init__.py  app.py
server/: clinical_trial_agent_environment.py  requirements.txt
